--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,67508],[],[[4,0,0,[],[1,170,24779],[]],[5,0,0,[],[0,24950,42556,6],[]]],[],[2,1,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16844],[],[[4,0,0,[],[1,200,16643],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TabbedWindows","*H:\\TestProject\\TestCases\\TabbedWindows.robot","*../TestCases/TabbedWindows.robot","*Tabbed Windows","*Browser Windows","*MaxRetryError: HTTPConnectionPool(host='localhost', port=62192): Max retries exceeded with url: /session/e0e82733bb173b58b71e51e899a2fef7/title (Caused by NewConnectionError('&lt;urllib3.connection.HTTPConnection object at 0x000001BA8A3659C0&gt;: Failed to establish a new connection: [WinError 10061] No connection could be made because the target machine actively refused it'))"]);
+window.output["strings"] = window.output["strings"].concat(["*","*UserKeywords","*H:\\TestProject\\TestCases\\UserKeywords.robot","*../TestCases/UserKeywords.robot","*User Keywords"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:07","fail":1,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:08","fail":1,"id":"s1","label":"TabbedWindows","name":"TabbedWindows","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"UserKeywords","name":"UserKeywords","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1664978938667;
+window.output["baseMillis"] = 1664982173580;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 67717;
+window.output["generated"] = 17121;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
