Learnt how to create For Loops

--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11172],[],[[4,0,0,[],[1,254,10914],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,79],[],[[4,0,0,[],[1,27,14],[]],[5,0,0,[],[1,43,12],[]],[6,0,0,[],[1,56,8],[]],[7,0,0,[],[1,67,10],[]]],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*ScrollingPage","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\ScrollingPage.robot","*../TestCases/ScrollingPage.robot","*Scrolling Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ForLoop","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\ForLoop.robot","*../TestCases/ForLoop.robot","*For Loop","*Another For Loop","*Anotherr For Loop","*Anotherrr For Loop"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"ScrollingPage","name":"ScrollingPage","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"ForLoop","name":"ForLoop","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665002832325;
+window.output["baseMillis"] = 1665132195115;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11199;
+window.output["generated"] = 113;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
