--- a/results/log.html
+++ b/results/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11172],[],[[4,0,0,[],[1,254,10914],[[0,5,6,0,7,8,0,0,[1,256,5290],[[256,2,9]]],[0,10,6,0,11,0,0,0,[1,5548,222],[]],[0,12,13,0,0,0,0,0,[1,5772,3],[[0,14,6,0,15,16,0,0,[1,5773,2],[]]]],[0,17,6,0,18,19,0,0,[1,5776,1036],[[5782,2,20]]],[0,17,6,0,18,21,0,0,[1,6813,1041],[[6816,2,22]]],[0,23,6,0,24,0,0,0,[1,7855,3312],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,79],[],[[4,0,0,[],[1,27,14],[[3,5,0,0,0,0,0,0,[1,28,13],[[4,6,0,0,0,0,0,0,[1,28,1],[[0,7,8,0,9,10,0,0,[1,28,1],[]]]],[4,11,0,0,0,0,0,0,[1,29,1],[[0,7,8,0,9,10,0,0,[1,29,1],[]]]],[4,12,0,0,0,0,0,0,[1,30,1],[[0,7,8,0,9,10,0,0,[1,30,1],[]]]],[4,13,0,0,0,0,0,0,[1,31,1],[[0,7,8,0,9,10,0,0,[1,31,1],[]]]],[4,14,0,0,0,0,0,0,[1,32,1],[[0,7,8,0,9,10,0,0,[1,32,0],[]]]],[4,15,0,0,0,0,0,0,[1,33,1],[[0,7,8,0,9,10,0,0,[1,33,1],[]]]],[4,16,0,0,0,0,0,0,[1,34,3],[[0,7,8,0,9,10,0,0,[1,35,1],[]]]],[4,17,0,0,0,0,0,0,[1,37,2],[[0,7,8,0,9,10,0,0,[1,37,2],[]]]],[4,18,0,0,0,0,0,0,[1,40,1],[[0,7,8,0,9,10,0,0,[1,40,1],[]]]]]]]],[19,0,0,[],[1,43,12],[[0,20,8,0,21,22,23,0,[1,45,0],[[45,2,24]]],[3,25,0,0,0,0,0,0,[1,45,7],[[4,26,0,0,0,0,0,0,[1,46,0],[[0,7,8,0,9,27,0,0,[1,46,0],[]]]],[4,28,0,0,0,0,0,0,[1,47,0],[[0,7,8,0,9,27,0,0,[1,47,0],[]]]],[4,29,0,0,0,0,0,0,[1,48,1],[[0,7,8,0,9,27,0,0,[1,48,0],[]]]],[4,30,0,0,0,0,0,0,[1,49,1],[[0,7,8,0,9,27,0,0,[1,49,1],[]]]],[4,31,0,0,0,0,0,0,[1,50,2],[[0,7,8,0,9,27,0,0,[1,50,1],[]]]]]]]],[32,0,0,[],[1,56,8],[[0,20,8,0,21,33,23,0,[1,57,1],[[57,2,34]]],[3,35,0,0,0,0,0,0,[1,58,6],[[4,36,0,0,0,0,0,0,[1,58,2],[[0,7,8,0,9,37,0,0,[1,59,1],[]]]],[4,38,0,0,0,0,0,0,[1,60,1],[[0,7,8,0,9,37,0,0,[1,60,1],[]]]],[4,39,0,0,0,0,0,0,[1,61,1],[[0,7,8,0,9,37,0,0,[1,62,0],[]]]],[4,40,0,0,0,0,0,0,[1,62,2],[[0,7,8,0,9,37,0,0,[1,63,1],[]]]]]]]],[41,0,0,[],[1,67,10],[[0,20,8,0,21,22,23,0,[1,68,1],[[69,2,24]]],[3,42,0,0,0,0,0,0,[1,70,6],[[4,43,0,0,0,0,0,0,[1,70,1],[[0,7,8,0,9,44,0,0,[1,70,0],[]],[0,45,8,0,46,47,0,0,[1,71,0],[]]]],[4,48,0,0,0,0,0,0,[1,72,2],[[0,7,8,0,9,44,0,0,[1,72,1],[]],[0,45,8,0,46,47,0,0,[1,73,1],[]]]],[4,49,0,0,0,0,0,0,[1,74,2],[[0,7,8,0,9,44,0,0,[1,74,0],[]],[0,45,8,0,46,47,0,0,[1,74,2],[[75,2,50]]]]]]]]]],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*ScrollingPage","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\ScrollingPage.robot","*../TestCases/ScrollingPage.robot","*Scrolling Test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${Browser}","eNqlyzEOgCAMAMCvNC5MyG7Uzdk3oBYwQWpKTb+vTj7A9ZKbTyx7ibAwaUUGM20RDQjB4ivCxRlM7yExhqFJImftnFPVdqWrCO9YLQVJaJU4b48eLmQfX7UfJzlyM/7qvfOjaW+ZuD8W","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Speed","*Resources","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*1","*Execute Javascript","*<p>Executes the given JavaScript code with possible arguments.\x3c/p>","*window.scrollTo(0,document.body.scrollHeight)","*Executing JavaScript:\nwindow.scrollTo(0,document.body.scrollHeight)\nWithout any arguments.","*window.scrollTo(0,-document.body.scrollHeight)","*Executing JavaScript:\nwindow.scrollTo(0,-document.body.scrollHeight)\nWithout any arguments.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ForLoop","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\ForLoop.robot","*../TestCases/ForLoop.robot","*For Loop","*${i} IN RANGE [ 1 | 10 ]","*${i} = 1","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*${i}","*${i} = 2","*${i} = 3","*${i} = 4","*${i} = 5","*${i} = 6","*${i} = 7","*${i} = 8","*${i} = 9","*Another For Loop","*Create List","*<p>Returns a list containing given items.\x3c/p>","*1, 2, 3, 4, 5","*@{items}","*@{items} = [ 1 | 2 | 3 | 4 | 5 ]","*${j} IN [ @{items} ]","*${j} = 1","*${j}","*${j} = 2","*${j} = 3","*${j} = 4","*${j} = 5","*Anotherr For Loop","*Duck, Chicken, Pig, Cow","*@{items} = [ Duck | Chicken | Pig | Cow ]","*${k} IN [ @{items} ]","*${k} = Duck","*${k}","*${k} = Chicken","*${k} = Pig","*${k} = Cow","*Anotherrr For Loop","*${l} IN [ @{items} ]","*${l} = 1","*${l}","*Exit For Loop If","*<p>Stops executing the enclosing FOR loop if the <code>condition\x3c/code> is true.\x3c/p>","*${l} == 3","*${l} = 2","*${l} = 3","*Exiting for loop altogether."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"ScrollingPage","name":"ScrollingPage","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"ForLoop","name":"ForLoop","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665002832325;
+window.output["baseMillis"] = 1665132195115;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11199;
+window.output["generated"] = 113;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
