Learnt how to extract link texts

--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,79],[],[[4,0,0,[],[1,27,14],[]],[5,0,0,[],[1,43,12],[]],[6,0,0,[],[1,56,8],[]],[7,0,0,[],[1,67,10],[]]],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,7061],[],[[4,0,0,[],[1,228,6828],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*ForLoop","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\ForLoop.robot","*../TestCases/ForLoop.robot","*For Loop","*Another For Loop","*Anotherr For Loop","*Anotherrr For Loop"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Links","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\Links.robot","*../TestCases/Links.robot","*Get All Links"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"ForLoop","name":"ForLoop","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Links","name":"Links","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665132195115;
+window.output["baseMillis"] = 1665133952468;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 113;
+window.output["generated"] = 7087;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
