--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7061],[],[[4,0,0,[],[1,228,6828],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10374],[],[[4,0,0,[],[1,242,10129],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Links","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\Links.robot","*../TestCases/Links.robot","*Get All Links"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Table","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\Table.robot","*../TestCases/Table.robot","*Table Validation"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Links","name":"Links","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"Table","name":"Table","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665133952468;
+window.output["baseMillis"] = 1665136747499;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7087;
+window.output["generated"] = 10444;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
