--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10374],[],[[4,0,0,[],[1,242,10129],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,12524],[],[[5,0,0,[],[1,4944,1103],[]],[6,0,0,[],[1,6051,980],[]],[7,0,0,[],[1,7032,973],[]],[8,0,0,[],[1,8007,1042],[]],[9,0,0,[],[1,9053,1005],[]]],[],[5,5,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Table","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\Table.robot","*../TestCases/Table.robot","*Table Validation"]);
+window.output["strings"] = window.output["strings"].concat(["*","*DDT1","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\DDT1.robot","*../TestCases/DDT1.robot","*<p>Testing the Login Page of NOP Commerce\x3c/p>","*Right User Empty Password","*Right User Wrong Password","*Wrong User Right Password","*Wrong User Empty Password","*Wrong User Wrong Password"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"Table","name":"Table","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"DDT1","name":"DDT1","pass":5,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665136747499;
+window.output["baseMillis"] = 1665141722877;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10444;
+window.output["generated"] = 12548;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
