--- a/Results/log.html
+++ b/Results/log.html
@@ -1803,31 +1803,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10623],[],[[4,0,0,[],[1,5197,1035],[[0,5,0,0,0,6,0,0,[1,5214,1017],[[0,7,8,0,0,0,0,0,[1,5217,349],[[0,9,10,0,11,12,0,0,[1,5219,346],[[5225,2,13]]]]],[0,14,8,0,0,15,0,0,[1,5566,128],[[0,16,10,0,17,18,0,0,[1,5567,127],[[5568,2,19]]]]],[0,20,8,0,0,21,0,0,[1,5695,116],[[0,16,10,0,17,22,0,0,[1,5695,115],[[5696,2,23]]]]],[0,24,8,0,0,0,0,0,[1,5811,385],[[0,25,10,0,26,27,0,0,[1,5812,383],[[5813,2,28]]]]],[0,29,8,0,0,0,0,0,[1,6196,35],[[0,30,10,0,31,32,0,0,[1,6196,35],[[6231,2,33]]]]]]]]],[34,0,0,[],[1,6233,940],[[0,5,0,0,0,35,0,0,[1,6236,936],[[0,7,8,0,0,0,0,0,[1,6236,315],[[0,9,10,0,11,12,0,0,[1,6237,313],[[6237,2,13]]]]],[0,14,8,0,0,15,0,0,[1,6551,132],[[0,16,10,0,17,18,0,0,[1,6552,130],[[6552,2,36]]]]],[0,20,8,0,0,21,0,0,[1,6683,100],[[0,16,10,0,17,22,0,0,[1,6683,100],[[6683,2,37]]]]],[0,24,8,0,0,0,0,0,[1,6783,361],[[0,25,10,0,26,27,0,0,[1,6784,360],[[6784,2,28]]]]],[0,29,8,0,0,0,0,0,[1,7144,28],[[0,30,10,0,31,32,0,0,[1,7145,27],[[7172,2,33]]]]]]]]],[38,0,0,[],[1,7174,943],[[0,5,0,0,0,39,0,0,[1,7177,939],[[0,7,8,0,0,0,0,0,[1,7178,289],[[0,9,10,0,11,12,0,0,[1,7178,289],[[7179,2,13]]]]],[0,14,8,0,0,15,0,0,[1,7467,136],[[0,16,10,0,17,18,0,0,[1,7469,134],[[7471,2,36]]]]],[0,20,8,0,0,21,0,0,[1,7604,102],[[0,16,10,0,17,22,0,0,[1,7605,101],[[7606,2,23]]]]],[0,24,8,0,0,0,0,0,[1,7706,388],[[0,25,10,0,26,27,0,0,[1,7707,386],[[7707,2,28]]]]],[0,29,8,0,0,0,0,0,[1,8094,22],[[0,30,10,0,31,32,0,0,[1,8095,20],[[8115,2,33]]]]]]]]]],[[1,40,8,0,0,0,0,0,[1,253,4939],[[0,41,10,0,42,43,0,0,[1,253,4716],[[253,2,44]]],[0,45,10,0,46,0,0,0,[1,4970,221],[]]]],[2,47,8,0,0,0,0,0,[1,8118,2505],[[0,48,10,0,49,0,0,0,[1,8119,2503],[]]]]],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29],[],[[4,0,0,[5],[1,26,2],[[0,6,7,0,8,9,0,0,[1,27,0],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*DDT3","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\DDT3.robot","*../TestCases/DDT3.robot","*Login Test With CSV Using admin@youtstore.com and adm","*Invalid Login","*admin@youtstore.com, adm","*Go To Login Page","*LoginResources","*Go To","*SeleniumLibrary","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*${LOGIN URL}","eNrzL0jNy8xLVygtylFQt0lUyChKTbNVyigpKSi20tdPTMnNzNNNSc3N18vLL0jOz81NLUpO1QMy9HPy0zPz7INSS0qL8kKLcmxVjdzAqoG0kh1l+m30E+3UAWzUNgM=","*Input Email","*${email}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://*[@id=&quot;Email\">xpath://*[@id=\"Email\x3c/a>\"], ${email}","*Typing text 'admin@youtstore.com' into text field '<a href=\"xpath://*[@id=&quot;Email\">xpath://*[@id=\"Email\x3c/a>\"]'.","*Input PSWD","*${password}","*<a href=\"xpath://*[@id=&quot;Password\">xpath://*[@id=\"Password\x3c/a>\"], ${password}","*Typing text 'adm' into text field '<a href=\"xpath://*[@id=&quot;Password\">xpath://*[@id=\"Password\x3c/a>\"]'.","*Click Login","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*xpath:/html/body/div[6]/div/div/div/div/div[2]/div[1]/div/form/div[3]/button","*Clicking element 'xpath:/html/body/div[6]/div/div/div/div/div[2]/div[1]/div/form/div[3]/button'.","*Error Message Should Be Visible","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*Login was unsuccessful","*Current page contains text 'Login was unsuccessful'.","*Login Test With CSV Using adm@yourstore.com and admin","*adm@yourstore.com, admin","*Typing text 'adm@yourstore.com' into text field '<a href=\"xpath://*[@id=&quot;Email\">xpath://*[@id=\"Email\x3c/a>\"]'.","*Typing text 'admin' into text field '<a href=\"xpath://*[@id=&quot;Password\">xpath://*[@id=\"Password\x3c/a>\"]'.","*Login Test With CSV Using adm@yourstore.com and adm","*adm@yourstore.com, adm","*Launch Browser","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${LOGIN URL}, ${BROWSER}","eNqli0EKgzAQAL+yCCUnE/BY1J7aqyD0AdGsMZDshk2k36/4BU8zh5kpIwXysAj/Cgqot/OooDIstiAcEkH1FnbBbWj2WnN5GmNdCtQ6TKyJ88opoayoTzGRfaDXjPUQ+kocHt3nqk82472/N3ZU+g+3lT32","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Exit Browser","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\Tags.robot","*../TestCases/Tags.robot","*TC1 Login Test","*Login","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*This is a login test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"DDT3","name":"DDT3","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Login","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665151272373;
+window.output["baseMillis"] = 1665154789147;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10660;
+window.output["generated"] = 45;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
