--- a/Results/report.html
+++ b/Results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10623],[],[[4,0,0,[],[1,5197,1035],[]],[5,0,0,[],[1,6233,940],[]],[6,0,0,[],[1,7174,943],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29],[],[[4,0,0,[5],[1,26,2],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*DDT3","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\DDT3.robot","*../TestCases/DDT3.robot","*Login Test With CSV Using admin@youtstore.com and adm","*Login Test With CSV Using adm@yourstore.com and admin","*Login Test With CSV Using adm@yourstore.com and adm"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\Tags.robot","*../TestCases/Tags.robot","*TC1 Login Test","*Login"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"DDT3","name":"DDT3","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Login","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665151272373;
+window.output["baseMillis"] = 1665154789147;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10660;
+window.output["generated"] = 45;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
