--- a/Results/log.html
+++ b/Results/log.html
@@ -1803,31 +1803,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,29],[],[[4,0,0,[5],[1,26,2],[[0,6,7,0,8,9,0,0,[1,27,0],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,19829],[],[[4,0,0,[],[1,212,19609],[[0,5,6,0,0,0,0,0,[1,213,1],[[0,7,8,0,9,10,0,0,[1,214,0],[]]]],[0,11,6,0,0,12,0,0,[1,215,6256],[[0,13,8,0,14,12,0,0,[1,215,5120],[[216,2,15]]],[0,16,8,0,17,0,0,0,[1,5335,1136],[]]]],[0,18,6,0,0,19,0,0,[1,6473,3173],[[0,20,8,0,21,22,0,0,[1,6473,3167],[[6474,2,23]]]]],[0,24,6,0,0,25,0,0,[1,9650,3334],[[0,20,8,0,21,26,0,0,[1,9656,3328],[[9662,2,27]]]]],[0,28,6,0,0,0,0,0,[1,12986,3708],[[0,29,8,0,30,31,0,0,[1,12987,3707],[[12988,2,32]]]]],[0,33,6,0,0,0,0,0,[1,16697,3122],[[0,34,8,0,35,0,0,0,[1,16698,3120],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\Tags.robot","*../TestCases/Tags.robot","*TC1 Login Test","*Login","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*This is a login test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginTest","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\LoginTest.robot","*../TestCases/LoginTest.robot","*Login Test","*Speed","*LoginKeywords","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*1","*Launch Browser","*${URL}, ${BROWSER}","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'Edge' to base url '<a href=\"https://demo.guru99.com/selenium/newtours/index.php\">https://demo.guru99.com/selenium/newtours/index.php\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Input Username","*${USER}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${txt_login_username}, ${USERNAME}","eNqNzDsKgDAQBNCrpEvnglp5DrtgEdmoCzEJYRS9vd/KymZhHjPb7knCqOA2KI0FMYv1WklAfHAQ51npLVlMDU2YPfWRd2JZCbb3jnBnZAKbsvugqU/hX81L2FQdDTHPf968i/NKSAt0cQD3HknD","*Input Pass","*${PASS}","*${txt_login_password}, ${PASSWORD}","eNqNzDsOgCAQhOGr0NG5iVp5DjtigVnQTRAIGY3e3ldnZTlfJn9/ZImTgtuhNFakIjZoJRHpRS8usNJ7tpg7mrEEGhMfxLIR7Bgc4dkoBDb18EHTXsK/nrewaQbyqSx/Mvf3LUnMK3R1AvcuScQ=","*Click Login Button","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${login_button}","eNpzzslMzs7MS1dIKi0pyc9TUK8oSCzJsNLPKMnN0U/KT6nUT8ks0y9JTMpJ1S8B80uK9EtSoo1i0QSjTYAiKUSpBImkRBvH6qflF+USYwxEEKQP5JjMvILSEnU9ALQ3QvI=","*Exit Browser","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>","eNqtjrEKwkAQRH9lu+sColU6OdMJisRuQWJuTTYct7B7xt/3Eq2s7WaKN28aVVHgBA+OBM7XeDVSw3CbZMRTooPyTOglcBrgrDJRnw1bsvwta/adkeFRBk5LrVTukh1IgsiJYFdD80/RPpJm+7VstjVcyOSpPX00L84juIWDFXRgZYgLwFa+zF3kUL0BTtBeVg=="]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Login","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"LoginTest","name":"LoginTest","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [];
+window.output["errors"] = [[210,4,36]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665154789147;
+window.output["baseMillis"] = 1665439735753;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 45;
+window.output["generated"] = 19856;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
