--- a/Results/report.html
+++ b/Results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,29],[],[[4,0,0,[5],[1,26,2],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,19829],[],[[4,0,0,[],[1,212,19609],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tags","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\Tags.robot","*../TestCases/Tags.robot","*TC1 Login Test","*Login"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginTest","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\LoginTest.robot","*../TestCases/LoginTest.robot","*Login Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Login","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tags","name":"Tags","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"LoginTest","name":"LoginTest","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665154789147;
+window.output["baseMillis"] = 1665439735753;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 45;
+window.output["generated"] = 19856;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
