--- a/Results/report.html
+++ b/Results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,19829],[],[[4,0,0,[],[1,212,19609],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,264],[],[[4,0,0,[],[0,234,27,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*LoginTest","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\LoginTest.robot","*../TestCases/LoginTest.robot","*Login Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginTest","*C:\\Users\\d_joh\\OneDrive\\Coding Projects\\TestProject\\TestCases\\LoginTest.robot","*../TestCases/LoginTest.robot","*Login Test","*ValueError: headlessedge is not a supported browser."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"LoginTest","name":"LoginTest","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"LoginTest","name":"LoginTest","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665439735753;
+window.output["baseMillis"] = 1665482058364;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 19856;
+window.output["generated"] = 282;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
